# slurm-gpu-tui

./: .gitignore  README.md  README_ko.md  app.py  bootstrap.sh  chkgpu  collector.py  deploy.sh  install.sh  pyproject.toml  requirements.txt  setup-node-power.sh  sgpu-collector.service  sgpu-cpu-agent.service  sgpu-gpu-persistence.service  sgpu-master-bridge.service  sgpu-master-bridge.timer  sgpu-sim-bridge.service  sgpu-sim-bridge.timer  swap-by-user.sh  uninstall.sh
.github/workflows/: test.yml
docs/: ALERTS.md  GRAFANA.md  PUSH.md
grafana/: bridge.env.example  gen-master-dashboards.py  gen-overview-dashboard.py  gen-sim-dashboards.py  install.sh  setup-bridge.sh  sgpu-dashboard.json  sgpu-master-dashboard.json  sgpu-master-node-detail.json  sgpu-node-detail.json  sgpu-overview.json  sgpu-remote-bridge.sh  sgpu-sim-dashboard.json  sgpu-sim-node-detail.json
prometheus/: sgpu-alerts.yml  sgpu-master-bridge.yml  sgpu-master-cluster-alerts.yml
src/sgpu/: __init__.py  agent.py  cells.py  cli.py  collector.py  common.py  notify.py  screens.py  tui.py  usage.py
tests/: test_accounting.py  test_agent_payload.py  test_cli.py  test_install.py  test_logs.py  test_master_metrics.py  test_mem_fair.py  test_notify.py  test_parsers.py
