[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sgpu"
version = "1.2.0"
description = "Real-time SLURM GPU cluster monitor TUI with idle-GPU detection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["slurm", "gpu", "monitoring", "tui", "hpc", "cluster", "nvidia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "textual>=0.61.0",
]

[project.urls]
Homepage = "https://github.com/eightmm/slurm-gpu-tui"
Repository = "https://github.com/eightmm/slurm-gpu-tui"
Issues = "https://github.com/eightmm/slurm-gpu-tui/issues"

[project.scripts]
sgpu = "sgpu.tui:main"
sgpu-collector = "sgpu.collector:main"
sgpu-agent = "sgpu.agent:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
